k8s/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: monitoring
spec:
  selector:
    app: monitoring-platform
  type: NodePort
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
