k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: monitoring
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: monitoring.local
    http:
      paths:
      - path: /logs/(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
